[project]
name = "gamearmy-telegram-bot"
version = "0.2.0"
description = "Telegram bot for monitoring game servers on gamearmy.ru"
authors = [{ name = "dealenx", email = "dealenx@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "sqlalchemy>=2.0.36",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
]

[project.scripts]
gamearmy-bot = "gamearmy_telegram_bot.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
